# elrincondeharco.com

./: .env  .env.example  .gitignore  README.md  compose.prod.yaml  compose.yaml  docker-compose.yml  frontend.md  package.json  seed-db.sh  setup.sh  vercel.json
backend/: .env.local  .env.production  .gitignore  Dockerfile  Makefile  docker-compose.yml  package.json  poetry-setup.sh  pyproject.toml  pytest.ini  seed-db.sh  setup.sh
backend/app/: __init__.py  main.py
backend/app/api/: route.py
backend/app/api/v1/endpoints/: about.py  auth.py  company.py  example.py  footer.py  hero.py  passions.py  projects.py  sectors.py  showroom.py  site_settings.py  (+2 more)
backend/app/core/: cloudinary.py  config.py  exceptions.py  security.py
backend/app/db/: seed.py  seed_site_settings.py  seed_site_settings_only.py  session.py
backend/app/models/: about.py  base.py  example.py  footer.py  hero.py  passions.py  projects.py  sector.py  showroom.py  site_settings.py  stack.py  testimonial.py
backend/app/schemas/: __init__.py  about.py  footer.py  hero.py  passions.py  projects.py  sector.py  showroom.py  site_settings.py  stack.py  testimonial.py  token.py  user.py
backend/app/services/auth/: TokenValidator.py
backend/migrations/: env.py
backend/migrations/versions/: 2a3b4c5d6e7f_add_sectors_and_testimonials.py  7969bead0e27_add_cv_url_column.py
backend/scripts/: entrypoint.dev.sh  entrypoint.sh  poetry-setup.sh  run-tests.sh  seed-db.sh  setup.sh
backend/tests/: conftest.py  test_api.py  test_config.py  test_crud.py  test_db.py  test_integration.py  test_models.py
(+140 files in other folders)
