[tool.poetry]
name = "portfolio-backend"
version = "1.0.0"
description = "Backend del portfolio personal con FastAPI y PostgreSQL"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
psycopg = {extras = ["binary", "pool"], version = "^3.1.13"}
pydantic-settings = "^2.0.3"
python-dotenv = "^1.0.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
email-validator = "^2.3.0"
cloudinary = "^1.44.1"
python-multipart = "^0.0.22"
alembic = "^1.18.4"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
httpx = "^0.25.2"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true